@@ -1,3 +1,9 @@
+kylin-recorder (1.2.23kord~rc3) v101; urgency=medium
+
+  * 修复bug# 26216：录制时间过长时，保存弹窗弹出时间过长
+
+ -- baijincheng <baijincheng@kylinos.cn>  Wed, 3 Feb 2021 09:50:00 +0800
+
 kylin-recorder (1.2.23kord~rc2) v101; urgency=medium
 
   * 去掉弹窗的border-radius,适配协议
